--- a/src/ui/fb.css
+++ b/src/ui/fb.css
@@ -1,23 +1,34 @@
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
+.fblogo {
+    background: #4661b0;
+    text-indent: -999em;
+    width: 37px;
+    height: 45px;
+    border-radius: 7px;
+    position: relative;
+    overflow: hidden;
+    border: 8px solid #4661b0;
+    border-bottom: 0;
+    margin-left: .5em;
 }
-
-.fa:hover {
-    opacity: 0.7;
+.fblogo:before {
+    content: "/20";
+    position: absolute;
+    background: #4661b0;
+    width: 14px;
+    height: 40px;
+    bottom: -11px;
+    right: -14px;
+    border: 8px solid white;
+    border-radius: 11px;
 }
-
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-
-.likes {
-    color: blue;
-    padding: 5px;
+.fblogo:after {
+    content: "/20";
+    position: absolute;
+    border-top: 8px solid #FFF;
+    border-left: 0px solid transparent;
+    border-right: 1px solid transparent;
+    height: 0;
+    width: 22px;
+    top: 17px;
+    right: 0px;
 }
