--- a/src/ui/fb.css
+++ b/src/ui/fb.css
@@ -1,34 +1,24 @@
-.fblogo {
-    background: #4661b0;
-    text-indent: -999em;
-    width: 37px;
-    height: 45px;
-    border-radius: 7px;
-    position: relative;
-    overflow: hidden;
-    border: 8px solid #4661b0;
-    border-bottom: 0;
-    margin-left: .5em;
+ 
+.app {
+	background: #3b5998;
+	border-radius: 10%;
+	display: block;
+	height: 70px;
+	width: 65px; 
 }
-.fblogo:before {
-    content: "/20";
-    position: absolute;
-    background: #4661b0;
-    width: 14px;
-    height: 40px;
-    bottom: -11px;
-    right: -14px;
-    border: 8px solid white;
-    border-radius: 11px;
-}
-.fblogo:after {
-    content: "/20";
-    position: absolute;
-    border-top: 8px solid #FFF;
-    border-left: 0px solid transparent;
-    border-right: 1px solid transparent;
-    height: 0;
-    width: 22px;
-    top: 17px;
-    right: 0px;
+ 
+.app:after {
+	color: #fff;
+	content: "f";
+	display: block;
+	font-family: Facebook Letter Faces, Arial;
+	font-size: 80px;
+	font-weight: bold;
+	margin: -20% 0 0 30%; }
+ 
+.app:hover {
+	-moz-box-shadow: 0px 0px 7px rgba(255, 250, 250, 0.75);
+	-webkit-box-shadow: 0px 0px 7px rgba(255, 250, 250, 0.75);
+	box-shadow: 0px 0px 7px rgba(255, 250, 250, 0.90);
+  cursor: pointer;
 }
