--- a/src/ui/fb.css
+++ b/src/ui/fb.css
@@ -3,8 +3,8 @@
 	background: #3b5998;
 	border-radius: 10%;
 	display: block;
-	height: 70px;
-	width: 65px; 
+	height: 40px;
+	width: 35px; 
 }
  
 .app:after {
@@ -12,7 +12,7 @@
 	content: "f";
 	display: block;
 	font-family: Facebook Letter Faces, Arial;
-	font-size: 80px;
+	font-size: 35px;
 	font-weight: bold;
 	margin: -20% 0 0 30%; }
  
@@ -21,4 +21,12 @@
 	-webkit-box-shadow: 0px 0px 7px rgba(255, 250, 250, 0.75);
 	box-shadow: 0px 0px 7px rgba(255, 250, 250, 0.90);
   cursor: pointer;
+}
+
+.widget-social-count{
+	font-size: 20px;
+}
+
+.widget-likes{
+	font-size: 11px;
 }
